# rls_robot_description

./: CMakeLists.txt  README.md  package.xml
config/: controller.yaml
config/rqt/: Default.perspective  pa10sim.perspective
gazebo/: gazebo.urdf.xacro
launch/: control.launch  display.launch  gazebo_sim.launch
meshes/dae/: attachment.dae  attachment.tif  gripper.dae  gripper.tif  hand-2.tif  hand.dae  hand.tif  hand2.dae  m1.dae  m1.tif  m2.dae  m2.tif  m3.dae  m3.tif  m4.dae  m4.tif  m5.dae  m5.tif  m6.dae  m6.tif  m7.dae  m7.tif  microwave.dae  oldAttachment.dae  oldAttachment.tif  oldModule7.dae  oldModule7.tif
meshes/dae/hmroom/: Thumbs.db  bookshelf1.dae  bookshelf2.dae  bookshelf2.tif  bookshelf3.dae  bookshelf3.tif  bookshelf4.dae  chair_blue.dae  chair_blue.tif  (+22 more)
meshes/stl/: NewAttachment.stl  NewFixture.stl  NewHandChanger.stl  NewHandFixture.stl  Newbase.stl  attachment.stl  box.stl  caster.stl  finger1.stl  finger2.stl  fixtureAssy.stl  fixture_hand.stl  hand.stl  handChanger.stl  m1.stl  m2.stl  m3.stl  m4.stl  m7.stl  oldAttachment.stl  oldFixture.stl  oldHandFixture.stl  oldModule7.stl  rootFinger.stl  smallWheel.stl  wheel.stl
robot/: arm_module.xacro  mobile_base.xacro  modular_home_robot.xacro
rviz/: display.rviz  pa10sim.rviz  simulation.rviz
urdf/: common.xacro
urdf/gripper/: gripper.gazebo.xacro  gripper.transmission.xacro  gripper.urdf.xacro
urdf/mobile_base/: mobile_base.gazebo.xacro  mobile_base.transmission.xacro  mobile_base.urdf.xacro
urdf/symmarm/: symmarm.gazebo.xacro  symmarm.transmission.xacro  symmarm.urdf.xacro
(+164 files in other folders)
